--- a/src/index.html
+++ b/src/index.html
@@ -2,18 +2,40 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1"
+        />
         <title>Donna Rice</title>
-        <meta name="description" content="The work of Donna Rice, a draftsperson and senior PA from Newcastle, Australia" />
-        <link rel="icon" href="/logo.svg" />
-        <link rel="preload" as="font" type="font/woff2" crossorigin href="/fonts/interdisplay-medium.woff2" />
-        <link rel="preload" as="font" type="font/woff2" crossorigin href="/fonts/interdisplay-regular.woff2" />
+        <meta
+            name="description"
+            content="The work of Donna Rice, a draftsperson and senior PA from Newcastle, Australia"
+        />
+        <link
+            rel="icon"
+            href="/logo.svg"
+        />
+        <link
+            rel="preload"
+            as="font"
+            type="font/woff2"
+            crossorigin
+            href="/fonts/interdisplay-medium.woff2"
+        />
+        <link
+            rel="preload"
+            as="font"
+            type="font/woff2"
+            crossorigin
+            href="/fonts/interdisplay-regular.woff2"
+        />
     </head>
     <body>
-        <noscript>
-            Please enable JavaScript in your browser.
-        </noscript>
+        <noscript> Please enable JavaScript in your browser. </noscript>
         <div id="app"></div>
-        <script type="module" src="/main.ts"></script>
+        <script
+            type="module"
+            src="/main.ts"
+        ></script>
     </body>
 </html>
