--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div id="app"></div>
         <script
             type="module"
-            src="/main.ts"
+            src="/src/main.ts"
         ></script>
     </body>
 </html>
